# create-star-conversion

./: .gitignore  compile_ts.cmd  index.html
Chamfer/: Chamfer.sln
Chamfer/Chamfer/: Chamfer.vcxproj.filters  Utils.cpp
backup/test-video.mp4/: Annotations.sqa  Settings.sqas
cv.sketch/cv.sketch/: chamfermatching.cpp  main.cpp
cv.sketch/cv.sketch.xcodeproj/: project.pbxproj
cv.sketch/cv.sketch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cvsketch/: README.md
cvsketch/cvsketch/: cvsketch_demo.cpp
cvsketch/cvsketch/src/: backup.cpp  cvsketch.cpp  cvsketch.hpp  histmap.cpp  histmap.hpp  main.cpp  matching.cpp  matching.hpp  segmentation.cpp  segmentation.hpp
cvsketch/ide/vs2015/: cvsketch.VC.VC.opendb  cvsketch.sln
cvsketch/snapshots/: color_palette.ai  debugging-hist.psd
data/ETHZShapeClasses-V1.2/Applelogos/: another_applelogos.groundtruth  bigwindow_edges.tif  biker_applelogos.groundtruth  biker_edges.tif  box_applelogos.groundtruth  bright_applelogos.groundtruth  candle_applelogos.groundtruth  candle_edges.tif  cccp_applelogos.groundtruth  cccp_edges.tif  corridor_applelogos.groundtruth  corridor_edges.tif  crystal_edges.tif  dark_applelogos.groundtruth  dark_edges.tif  dealer_applelogos.groundtruth  dog_applelogos.groundtruth  dog_edges.tif  double_applelogos.groundtruth  float_applelogos.groundtruth  float_edges.tif  four_applelogos.groundtruth  four_edges.tif  grey_applelogos.groundtruth  grid_applelogos.groundtruth  grid_edges.tif  hat_edges.tif  key_edges.tif  london_applelogos.groundtruth  london_edges.tif  monitor_applelogos.groundtruth  notebook_edges.tif  piggy_edges.tif  red_applelogos.groundtruth  redbook_applelogos.groundtruth  redhole_applelogos.groundtruth  redhole_edges.tif  simspon_applelogos.groundtruth  simspon_edges.tif  ssd_applelogos.groundtruth  (+8 more)
data/ETHZShapeClasses-V1.2/Bottles/: Chardonnay_edges.tif  acaw_bottles.groundtruth  beach_bottles.groundtruth  beach_edges.tif  bird_bottles.groundtruth  bird_edges.tif  blue2_bottles.groundtruth  blue3_bottles.groundtruth  brunelo_bottles.groundtruth  capitoul_edges.tif  coal_bottles.groundtruth  cuvee_edges.tif  dark_bottles.groundtruth  dark_edges.tif  don_edges.tif  drool_bottles.groundtruth  drool_edges.tif  dry2_bottles.groundtruth  dry_edges.tif  fine_bottles.groundtruth  fine_edges.tif  four_bottles.groundtruth  green_bottles.groundtruth  grote_bottles.groundtruth  heineken_bottles.groundtruth  heineken_edges.tif  hill_bottles.groundtruth  ichnusa_edges.tif  kitchen_edges.tif  light_edges.tif  mino_bottles.groundtruth  pale_bottles.groundtruth  pale_edges.tif  party_edges.tif  ray_edges.tif  red_bottles.groundtruth  red_edges.tif  sangiovese_bottles.groundtruth  sangiovese_edges.tif  skratch_edges.tif  (+13 more)
data/ETHZShapeClasses-V1.2/Giraffes/: african_edges.tif  african_giraffes.groundtruth  amsterdam_giraffes.groundtruth  banal2_edges.tif  blonde_giraffes.groundtruth  bright_edges.tif  bright_giraffes.groundtruth  brookfield_edges.tif  brown2_edges.tif  brown2_giraffes.groundtruth  brown4_edges.tif  brown4_giraffes.groundtruth  camuflage_giraffes.groundtruth  clutter_edges.tif  clutter_giraffes.groundtruth  cluttersissimo_avgsize_giraffes.groundtruth  cosmo_giraffes.groundtruth  cuddle_edges.tif  dark2_edges.tif  dark2_giraffes.groundtruth  darked_giraffes.groundtruth  detroit_edges.tif  detroit_giraffes.groundtruth  devon_giraffes.groundtruth  dragon_edges.tif  drawing2_edges.tif  drawing2_giraffes.groundtruth  drawing3_edges.tif  drawing4_giraffes.groundtruth  drawing_edges.tif  drawing_giraffes.groundtruth  drawwhite_edges.tif  drawwhite_giraffes.groundtruth  easily_giraffes.groundtruth  etosha_giraffes.groundtruth  far_edges.tif  far_giraffes.groundtruth  five_giraffes.groundtruth  green_edges.tif  green_giraffes.groundtruth  (+55 more)
data/ETHZShapeClasses-V1.2/Mugs/: apple_edges.tif  blue_mugs.groundtruth  blue_mugs_outlines.pgm  campfire_edges.tif  campfire_mugs_outlines.pgm  caroline_mugs_outlines.pgm  clutter_mugs.groundtruth  cock_edges.tif  cool_edges.tif  cool_mugs_outlines.pgm  grid_edges.tif  grid_mugs.groundtruth  hockey_mugs_outlines.pgm  jazzburger_edges.tif  jazzburger_mugs.groundtruth  kids_edges.tif  kids_mugs.groundtruth  kids_mugs_outlines.pgm  mat_mugs_outlines.pgm  (+62 more)
data/images/: text-color-grays.psd
data/shape_sample/: README.md
data/sketch_sample/: README.md
sbss/: CMakeLists.txt
sbss/cfg/: para_line_fitter_target.txt  para_line_fitter_template.txt  para_line_matcher.txt
sbss/old_bak/: CMakeLists.txt  test-sketch-matching.cpp
sbss/old_bak/FDCM_1/Fitline/: LFLineFitter.h
sbss/old_bak/FDCM_1/TooN/: so3.h
sbss/old_bak/FDCM_1/Utils/: PoseEstimationSURF.cpp  edge_templates_generator.h
sbss/old_bak/FDCM_1/Utils/object_tracking_2D/: ObjectModel.h  ParticleFilter.h  PoseEstimationSURF.h
sbss/src/: Chamfer.cpp  Chamfer.vcxproj  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  test-chamfer-matching.cpp  test-sketch-matching.cpp
sbss/src/FDCM_1/Fdcm/: EIEdgeImage.h
sbss/src/FDCM_1/TooN/: LU.h  se3.h
sbss/src/FDCM_1/Utils/: EdgeTracker.cpp  glm.cpp  objectmodel.cpp
sbss/src/FDCM_1/Utils/object_tracking_2D/: glm.h
sbss/src/FDCM_2/Fdcm/: EIEdgeImage.cpp  fdcm.cpp  fdcm.h
sbss/src/FDCM_2/Fitline/: fitline.cpp  fitline.h
sbss/src/Fdcm/: LMDirectionalIntegralDistanceImage.h  LMDisplay.h  LMDistanceImage.cpp  LMDistanceImage.h  LMLineMatcher.h
sbss/src/Fitline/: LFLineFitter.cpp
sbss/src/TooN/: SVD.h  TooN.h  helpers.h  vbase.hh  wls.h
sbss/src/Utils/: PoseEstimationSURF.cpp  Timer.cpp  Timer.hpp  edge_templates_generator.cpp  epnp.cpp
sbss/src/Utils/object_tracking_2D/: EdgeTracker.h  ObjectModel.h  PoseEstimationSURF.h
sbss/src/cfg/: hingeTemplate.txt  para_line_fitter.txt  para_line_matcher.txt
sbss/src/chamfer/: Chamfer.cpp  Chamfer.hpp  Utils.cpp  Utils.hpp
src_ts/: app.ts  config.ts  tsconfig.json
src_ts/States/: Game.ts  Menu.ts  Title.ts
src_ts/Utils/: Timer.ts
tools/spritesheet_tool/: Readme.txt  ShoeBox_3.6.5_public.air
web/: compile_ts.sh  create_dist.cmd
web/css/: app.css
web/game/: README.md
web/src_ts/: app.ts
(+368 files in other folders)
